# ShellEnhance

./: .gitignore  .gitmodules  CMakeLists.txt
source/: Agent.cpp  Agent.h  Top.cpp  Top.h  Top.ui  main.cpp
source/assets/: app_win32.rc  assets.qrc  globalStyleSheet.qss  style.qss
source/content/: CommandPanel.cpp  CommandPanel.h  CommandPanel.ui  DebugView.cpp  DebugView.h  DebugView.ui  XPLineEdit.cpp  XPLineEdit.hpp  XtermPanel.cpp  XtermPanel.h  XtermPanel.ui  console.cpp  console.h  cp_ini_default.cpini  flowlayout.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
source/others/: ThreadPool.cpp  ThreadPool.h  my_cv_imread.h
